add keba plugin

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,21 @@
 builddir
 doc/html
 *api.json.new
+*.o
+*.log
 *.qm
 *.install
+*.crossbuilder
+*.deb
+debs*
+moc_*.cpp
+*.moc
+Makefile
+*.so*
+qrc_*.cpp
+*debhelper.log
+*.dirs
+*.install
+*.substvars
+plugininfo.h
+extern-plugininfo.h
