--- a/debian/control
+++ b/debian/control
@@ -520,7 +520,22 @@ Description: guh.io plugin for ws2812
  With the powerful rule engine you are able to connect any device available
  in the system and create individual scenes and behaviors for your environment.
  .
- This package will install the guh.io plugin for ws2812
+This package will install the guh.io plugin for ws2812
+
+
+Package: guh-plugin-keba
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+         guh-plugins-translations,
+Description: guh.io plugin for keba
+ The guh daemon is a plugin based IoT (Internet of Things) server. The
+ server works like a translator for devices, things and services and
+ allows them to interact.
+ With the powerful rule engine you are able to connect any device available
+ in the system and create individual scenes and behaviors for your environment.
+ .
+ This package will install the guh.io plugin for keba
 
 
 Package: guh-plugins-translations
@@ -559,6 +574,7 @@ Depends: guh-plugin-awattar,
          guh-plugin-usbwde,
          guh-plugin-wakeonlan,
          guh-plugin-wemo,
+         guh-plugin-keba,
 Description: Plugins for guh IoT server - the default plugin collection
  The guh daemon is a plugin based IoT (Internet of Things) server. The
  server works like a translator for devices, things and services and
