--- a/commandlauncher/deviceplugincommandlauncher.json
+++ b/commandlauncher/deviceplugincommandlauncher.json
@@ -1,17 +1,17 @@
 {
-    "name": "Application and script launcher",
-    "idName": "CommandLauncher",
+    "name": "CommandLauncher",
+    "displayName": "Application and script launcher",
     "id": "5d37b796-4872-4eab-a7af-94ca9ddd8199",
     "vendors": [
         {
             "name": "guh",
-            "idName": "guh",
+            "displayName": "guh",
             "id": "2062d64d-3232-433c-88bc-0d33c0ba2ba6",
             "deviceClasses": [
                 {
                     "id": "0f39fe9e-51ea-4230-9646-2482c6234791",
-                    "idName": "application",
-                    "name": "Application launcher",
+                    "name": "application",
+                    "displayName": "Application launcher",
                     "createMethods": ["user"],
                     "primaryActionTypeId": "cf52b41d-3108-423c-8907-ca5b4d97cac5",
                     "primaryStateTypeId": "28d7e933-ff05-4f4c-95a0-482689543de5",
@@ -22,8 +22,8 @@
                     "paramTypes": [
                         {
                             "id": "79e54f91-2771-459a-9cb0-1d37759d2e33",
-                            "idName": "command",
                             "name": "command",
+                            "displayName": "command",
                             "type": "QString",
                             "inputType": "TextLine"
                         }
@@ -31,9 +31,9 @@
                     "stateTypes": [
                         {
                             "id": "28d7e933-ff05-4f4c-95a0-482689543de5",
-                            "idName": "running",
                             "name": "running",
-                            "eventTypeName": "running changed",
+                            "displayName": "running",
+                            "displayNameEvent": "running changed",
                             "type": "bool",
                             "defaultValue": false
                         }
@@ -41,20 +41,20 @@
                     "actionTypes": [
                         {
                             "id": "cf52b41d-3108-423c-8907-ca5b4d97cac5",
-                            "idName": "execute",
-                            "name": "execute"
+                            "name": "execute",
+                            "displayName": "execute"
                         },
                         {
                             "id": "d21b1fed-1dd9-4c5a-a64e-0c6ba94059be",
-                            "idName": "kill",
-                            "name": "kill"
+                            "name": "kill",
+                            "displayName": "kill"
                         }
                     ]
                 },
                 {
                     "id": "96044325-a6fb-47c9-9117-f29c3b327978",
-                    "idName": "script",
-                    "name": "Bashscript launcher",
+                    "name": "script",
+                    "displayName": "Bashscript launcher",
                     "basicTags": [
                         "Service",
                         "Actuator"
@@ -64,8 +64,8 @@
                     "paramTypes": [
                         {
                             "id": "391cf4af-ccb4-4ec0-9711-00c1b53a3c4c",
-                            "idName": "script",
                             "name": "script",
+                            "displayName": "script",
                             "type": "QString",
                             "inputType": "Url"
                         }
@@ -73,9 +73,9 @@
                     "stateTypes": [
                         {
                             "id": "28d7e933-ff05-4f4c-95a0-482689543de5",
-                            "idName": "running",
                             "name": "running",
-                            "eventTypeName": "running changed",
+                            "displayName": "running",
+                            "displayNameEvent": "running changed",
                             "type": "bool",
                             "defaultValue": false
                         }
@@ -83,13 +83,13 @@
                     "actionTypes": [
                         {
                             "id": "cf52b41d-3108-423c-8907-ca5b4d97cac5",
-                            "idName": "execute",
-                            "name": "execute"
+                            "name": "execute",
+                            "displayName": "execute"
                         },
                         {
                             "id": "d21b1fed-1dd9-4c5a-a64e-0c6ba94059be",
-                            "idName": "kill",
-                            "name": "kill"
+                            "name": "kill",
+                            "displayName": "kill"
                         }
                     ]
                 }
