Add debian package for http commander

--- a/debian/control
+++ b/debian/control
@@ -538,6 +538,21 @@ Description: guh.io plugin for TCP commander
  This package will install the guh.io plugin for TCP commander
 
 
+Package: guh-plugin-httpcommander
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+         guh-plugins-translations,
+Description: guh.io plugin for HTTP commander
+ The guh daemon is a plugin based IoT (Internet of Things) server. The
+ server works like a translator for devices, things and services and
+ allows them to interact.
+ With the powerful rule engine you are able to connect any device available
+ in the system and create individual scenes and behaviors for your environment.
+ .
+ This package will install the guh.io plugin for HTTP commander
+
+
 Package: guh-plugins-translations
 Section: misc
 Architecture: all
@@ -550,7 +565,6 @@ Description: Translation files for guh plugins - translations
  in the system and create individual scenes and behaviors for your environment.
  .
  This package provides the translation files for all guh plugins.
-
 
 
 Package: guh-plugins
